--- a/app/assets/stylesheets/spacing.css
+++ b/app/assets/stylesheets/spacing.css
@@ -25,3 +25,15 @@
 .mr {
 	margin-right: 0.5rem;
 }
+
+.mr-sm {
+  margin-right: .6em;
+}
+
+.mr, .mr-md {
+  margin-right: 1em;
+}
+
+.mr-lg {
+  margin-right: 1.75em;
+}
