--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,16 @@
 <div class="container">
   <h2 class="title">Join and ask questions!</h2>
 
+  <% if @user.errors.any? %>
   <div class="mt">
-    <%= form_with model: @user do |form| %>
+    <% @user.errors.full_messages.each do |message| %>
+      <p class="mb-sm text-red"><%= message %></p>
+    <% end %>
+  </div>
+  <% end %>
+
+  <div class="mt">
+    <%= form_with model: @user, data: {turbo: false} do |form| %>
       <p><%= form.label :name, 'Your name' %></p>
       <p><%= form.text_field :name, class: 'form-text-field' %></p>
 
@@ -12,8 +20,11 @@
       <p class="mt"><%= form.label :email %></p>
       <p><%= form.text_field :email, class: 'form-text-field' %></p>
 
-      <p class="mt"><%= form.label :password, 'Пароль' %></p>
+      <p class="mt"><%= form.label :password %></p>
       <p><%= form.password_field :password, class: 'form-text-field' %></p>
+
+      <p class="mt"><%= form.label :password_confirmation %></p>
+      <p><%= form.password_field :password_confirmation, class: 'form-text-field' %></p>
 
       <p><%= form.submit "Register", class: 'button button-main mt-lg' %></p>
     <% end %>
