--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -21,7 +21,7 @@ body {
 
 .navbar {
   align-items: center;
-  background-color: #370617;
+/*  background-color: #370617;*/
   color: white;
   display: flex;
   justify-content: space-between;
