--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
 
   <body>
     <div class="wrapper">
-      <div class="navbar">
+
+      <%= content_tag :div, class: "navbar", style: "background-color: #{current_user_header_color}" do %>
+      <!-- <div class="navbar" style=<%= "background-color: #{current_user_header_color}" %>> -->
         <p class="title-sm text-bold"><%= link_to "Ask me!", root_path %></p>
         <div>
           <% if current_user.present? %> 
@@ -23,7 +25,9 @@
             <%= link_to 'Sign in', new_session_path, class: 'button button-yellow' %>
           <% end %>
         </div>
-      </div>
+      <!-- </div> -->
+      <% end %>
+
       <% if flash[:notice].present? %>
         <p class="mb mt message message-notice"><%= flash[:notice] %></p>
       <% elsif flash[:alert].present? %>
