--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,20 +12,17 @@
 
   <body>
     <div class="wrapper">
-
       <%= content_tag :div, class: "navbar", style: "background-color: #{current_user_header_color}" do %>
-      <!-- <div class="navbar" style=<%= "background-color: #{current_user_header_color}" %>> -->
         <p class="title-sm text-bold"><%= link_to "Ask me!", root_path %></p>
         <div>
           <% if current_user.present? %> 
-            <%= link_to nickname_current_user, edit_user_path(current_user), class: 'mr-sm' %>
+            <%= link_to nickname_current_user, user_path(current_user), class: 'mr-sm' %>
             <%= button_to 'Sign out', session_path, method: :delete %>
           <% else %>
             <%= link_to 'Registration', new_user_path, class: 'button button-yellow mr-sm' %>
             <%= link_to 'Sign in', new_session_path, class: 'button button-yellow' %>
           <% end %>
         </div>
-      <!-- </div> -->
       <% end %>
 
       <% if flash[:notice].present? %>
