--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-	<h2 class="title-lg mb">New Question</h2>
+	<h2 class="title-lg mb-sm">New Question</h2>
+	<p class="mb">для <%= link_to "@#{@question.user.nickname}", user_path(@question.user) %></p>
 
 	<%= render 'form', question: @question %>
 </div>
