change index: add avatar for users

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,8 +10,10 @@
  *= require button
  *= require form
  *= require message
+ *= require utils
  *
  *= require question
  *= require user
- *= require image.css
+ *= require users
+ *= require image
  */
