--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,18 @@
 <div class="container">
+  <h2 class="title-lg mb">
+    Recently added
+  </h2>
+
+  <div class="users-box">
+    <% @users.each do |user| %>
+      <%= render partial: 'users/user_avatar', locals: {user: user} %>
+    <% end %>
+  </div>
+</div>
+
+<div class="container">
 	<h2 class="title-lg">
-		Total <%= @questions.count %>
+		Last <%= @questions.count %>
 		<%= inclinator(@questions.count, 'question', 'questions') %>
 	</h2>
 </div>
@@ -9,6 +21,10 @@
 	<% class_question_hidden = question.hidden ? "question_is_hidden" : "question_is_visible" %>
 
 	<%= content_tag :div, class: ["mt-sm", "container", class_question_hidden] do %>
+	<p class="mb text-sm text-grey">
+      Вопрос <%= link_to "##{question.id}", question_path(question) %>
+      для юзера <%= link_to "@#{question.user.nickname}", user_path(question.user) %>
+    </p>
 	<%= render question %>
 	<% end %>  
 <% end %>
