--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -18,21 +18,26 @@
 }
 
 .users-box-user-bg0 {
-  background: #d00000;
+  border: 3px solid #d00000;
+  background-color: #FFFFFF;
 }
 
 .users-box-user-bg1 {
-  background: #03071E;
+  border: 3px solid #03071E;
+  background-color: #FFFFFF;
 }
 
 .users-box-user-bg2 {
-  background: #ffba08;
+  border: 3px solid #ffba08;
+  background-color: #FFFFFF;  
 }
 
 .users-box-user-bg3 {
-  background: #6A040F;
+  border: 3px solid #6A040F;
+  background-color: #FFFFFF; 
 }
 
 .users-box-user-bg4 {
-  background: #f48c06;
+  border: 3px solid #f48c06;
+  background-color: #FFFFFF; 
 }
